--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,10 +5,12 @@
             "label": "C/C++: g++.exe build active file",
             "command": "C:\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\g++.exe",
             "args": [
+                "-std=c++17",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
+
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
